# graph-neural-networks

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: code-quality-pr.yaml  run-pytest.yaml  tests.yaml
src/graph_neural_networks/: eval.py  train.py
src/graph_neural_networks/callbacks/: prediction_writer.py
src/graph_neural_networks/configs/: __init__.py  eval.yaml  train.yaml
src/graph_neural_networks/configs/callbacks/: default.yaml  early_stopping.yaml  graph_level_prediction_writer.yaml
src/graph_neural_networks/configs/data/: lightning_dataset.yaml  mnist.yaml  ogb_lightning_dataset.yaml  split_lightning_dataset.yaml
src/graph_neural_networks/configs/data/dataset/: _graph_prop_pred.yaml  _tu_dataset.yaml  enzymes.yaml  mutag.yaml  ogbg-molhiv.yaml
src/graph_neural_networks/configs/data/dataset/ogb_base/: graph_prop_pred.yaml
src/graph_neural_networks/configs/data/dataset/pyg_base/: tu_dataset.yaml
src/graph_neural_networks/configs/data/split/: k_fold.yaml  subsets.yaml  train_test.yaml
src/graph_neural_networks/configs/experiment/: graph_classification.yaml  graph_level_prediction.yaml
src/graph_neural_networks/configs/hparams_search/: graph_classification_cv_optuna.yaml  graph_classification_optuna.yaml  graph_level_optuna.yaml
src/graph_neural_networks/configs/local/: example.yaml
src/graph_neural_networks/configs/model/: graph_classification.yaml  graph_classifier.yaml  graph_level.yaml  mnist.yaml
src/graph_neural_networks/configs/model/components/: basic_gnn.yaml  gcn.yaml  mlp.yaml
src/graph_neural_networks/configs/model/components/graph_pooling/: mean.yaml
src/graph_neural_networks/configs/model/encoder/: mlp.yaml
src/graph_neural_networks/configs/model/head/: mlp.yaml
src/graph_neural_networks/configs/model/metrics/: binary_classification.yaml  multi_classification.yaml  regression.yaml
src/graph_neural_networks/configs/model/metrics/metrics/: acc.yaml  auroc.yaml  confusion_matrix.yaml  f1.yaml  r2.yaml
src/graph_neural_networks/configs/model/metrics/wrappers/: classwise.yaml
src/graph_neural_networks/configs/model/optimizer/: adamw.yaml
src/graph_neural_networks/configs/model/readout/: add.yaml  max.yaml  mean.yaml  sum.yaml
src/graph_neural_networks/configs/model/scheduler/: step_lr.yaml
src/graph_neural_networks/configs/serial_sweeper/: cross_validation.yaml
src/graph_neural_networks/data/: __init__.py  datamodule.py  split.py
src/graph_neural_networks/models/: __init__.py  abstract.py  graph_level.py
src/graph_neural_networks/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
tests/helpers/: package_available.py  run.py
tests/integration/: conftest.py  test_configs.py  test_eval.py  test_sweeps.py  test_train.py
tests/unit/data/: conftest.py  test_datamodules.py  test_splits.py
